# AI-Powered-Chess-GameAI-Powered-Chess-Game

./: CMakeLists.txt  README.md  interview_prep_guide.md
include/: AI.h  Board.h  Game.h  Piece.h  Pieces.h
src/: AI.cpp  Board.cpp  Game.cpp  Pieces.cpp  main.cpp
